# app-sandpit

./: .gitignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
.github/: docker-publish.yml
.github/workflows/: docker-publish.yml
src/sandpit/: __init__.py  main.py  version.py
src/sandpit/api/: version_api.py
src/sandpit/cli/: __main__.py  cli.py  dummy.py
src/sandpit/infrastructure/: app_setup.py  logging.py
src/sandpit/models/: version_model.py
