[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling", "uv-dynamic-versioning" ]

[project]
name = "sandpit"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

scripts.sandpit = "sandpit.cli.cli:app"

dynamic = [ "dependencies", "version" ]

[tool.hatch.version]
source = "uv-dynamic-versioning"


[tool.hatch.build.hooks.version]
path = "src/sandpit/_version.py"
template = '''
version = "{version}"
'''


